# palm-django

./: CHANGELOG.md  LICENSE  README.md  RELEASE-0.8.0.md  justfile  pyproject.toml
.github/workflows/: publish.yml
palm_django/: __init__.py  _django_compat.py  admin.py  apps.py  backends.py  checks.py  discovery.py  doctor.py  models.py  runtime.py  settings.py  signals.py  storage_keys.py  transactions.py
palm_django/management/: palm_cli.py  quickstart.py  server.py
palm_django/management/commands/: palm.py
palm_django/migrations/: 0001_initial.py
palm_django/providers/: __init__.py  provider.py  registry.py
palm_django/resources/: __init__.py  base.py  config.py  decorator.py  registry.py  schema.py  serializer.py
palm_django/storages/: __init__.py  registry.py
tests/: conftest.py  settings.py  test_admin.py  test_commands.py  test_management.py  test_resources.py  test_runtime.py  test_schemas.py  test_server_command.py  test_settings.py  test_signals.py  test_storage.py  test_transactions.py  test_wizard_sample.py
tests/palm_sample/: apps.py  models.py  palm_definitions.py
tests/palm_sample/migrations/: 0001_initial.py  0002_schemaitem.py
